--- a/client/src/components/CardPanel/styles.module.css
+++ b/client/src/components/CardPanel/styles.module.css
@@ -50,6 +50,16 @@
     }
 }
 
+.cardTrack {
+    display: flex;
+
+    & .card {
+        width: 97%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 .tabs {
     display: flex;
     width: 100%;
